@@ -68,6 +68,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => "config error: parse error: could not open conf file '$Amanda::Paths::CONFIG_DIR/TESTCONF/amanda.conf': No such file or directory",
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1500001'
 	  },
         ],
@@ -104,6 +106,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'Required \'disk\' argument is not provided.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1400009'
 	  },
         ],
@@ -123,6 +127,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'No such host \'Localhost\' in disklist.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1400007'
 	  },
         ],
@@ -139,6 +145,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'No command specified: force, force_level_1, force_bump, force_no_bump.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300030'
 	  },
         ],
@@ -157,6 +165,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'localhost:/home is set to a forced level 0 at next run.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300003'
 	  },
         ],
@@ -175,6 +185,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'localhost:/home is set to a forced level 0 at next run.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300003'
 	  },
         ],
@@ -193,6 +205,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'force command for localhost:/home cleared.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300019'
 	  },
         ],
@@ -211,6 +225,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'no force command outstanding for localhost:/home, unchanged.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300021'
 	  },
         ],
@@ -228,6 +244,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'Only one command allowed.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300031'
 	  },
         ],
@@ -246,6 +264,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'localhost:/home is set to a forced level 1 at next run.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300023'
 	  },
         ],
@@ -264,6 +284,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'localhost:/home is set to a forced level 1 at next run.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300023'
 	  },
         ],
@@ -282,6 +304,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'force-level-1 command for localhost:/home cleared.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300020'
 	  },
         ],
@@ -300,6 +324,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'no force command outstanding for localhost:/home, unchanged.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300021'
 	  },
         ],
@@ -318,6 +344,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'localhost:/home is set to a forced level 1 at next run.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300023'
 	  },
         ],
@@ -336,6 +364,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'localhost:/home FORCE-LEVEL-1 command was cleared',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300000'
 	  },
           {	'source_filename' => "$amperldir/Amanda/Curinfo.pm",
@@ -345,6 +375,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'localhost:/home is set to a forced level 0 at next run.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300003'
 	  },
         ],
@@ -363,6 +395,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'localhost:/home FORCE command was cleared',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300022'
 	  },
           {	'source_filename' => "$amperldir/Amanda/Curinfo.pm",
@@ -372,6 +406,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'localhost:/home is set to bump at next run.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300025'
 	  },
         ],
@@ -390,6 +426,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'localhost:/home is set to bump at next run.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300025'
 	  },
         ],
@@ -408,6 +446,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'bump command for localhost:/home cleared.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300027'
 	  },
         ],
@@ -426,6 +466,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'no bump command outstanding for localhost:/home, unchanged.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300028'
 	  },
         ],
@@ -444,6 +486,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'localhost:/home is set to bump at next run.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300025'
 	  },
         ],
@@ -462,6 +506,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'localhost:/home FORCE-BUMP command was cleared',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300001'
 	  },
           {	'source_filename' => "$amperldir/Amanda/Curinfo.pm",
@@ -471,6 +517,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'localhost:/home is set to not bump at next run.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300026'
 	  },
         ],
@@ -489,6 +537,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'localhost:/home is set to not bump at next run.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300026'
 	  },
         ],
@@ -507,6 +557,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'bump command for localhost:/home cleared.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300027'
 	  },
         ],
@@ -525,6 +577,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'no bump command outstanding for localhost:/home, unchanged.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300028'
 	  },
         ],
@@ -543,6 +597,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'localhost:/home-incronly full dump done offline, next dump will be at level 1.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300002'
 	  },
         ],
@@ -561,6 +617,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'localhost:/home is set to not bump at next run.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300026'
 	  },
         ],
@@ -579,6 +637,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'localhost:/home FORCE-NO-BUMP command was cleared.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300024'
 	  },
           {	'source_filename' => "$amperldir/Amanda/Curinfo.pm",
@@ -588,6 +648,8 @@ is_deeply (Installcheck::Rest::remove_source_line($reply),
 		'message' => 'localhost:/home is set to bump at next run.',
 		'process' => 'Amanda::Rest::Dles',
 		'running_on' => 'amanda-server',
+		'component' => 'rest-server',
+		'module' => 'amanda',
 		'code' => '1300025'
 	  },
         ],
